Sticky Button Firefox bug fixed

--- a/public/css/extra.css
+++ b/public/css/extra.css
@@ -30,6 +30,7 @@
 .stickyBtn img{
     position: relative;
     width: 50px;
+    height: 50px;
     right: 18px;
 }
 .stickyBtn:hover span{
